# road-lane-detection

./: .gitignore  lane_detection.ipynb  lane_detection.py  main.py  pyproject.toml
static/: index.html  index.js  video.html  video.js
